--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,7 +18,8 @@
   <title>React Reading List</title>
 </head>
 
-<body>
+<body background="/client/images/books.jpeg">
+    
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
